<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        android:visible="true"
        app:showAsAction="ifRoom" >

        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">

                <item
                    android:id="@+id/menu_sort_by_popularity"
                    android:title="@string/most_popular"
                    android:checked="true" />

                <item
                    android:id="@+id/menu_sort_by_top_rated"
                    android:title="@string/top_rated"
                    android:orderInCategory="2" />

                <item
                    android:id="@+id/menu_sort_by_favorites"
                    android:title="@string/favorites"
                    android:orderInCategory="3" />
            </group>
        </menu>
    </item>
</menu>