<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/fragment_details_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_video"
                    style="@style/ItemCardView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="w,3:2"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivMovie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_backdrop_image"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="@dimen/movie_image_detail_width_percent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fb_Like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_vote_value"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_vote_value"
                    app:srcCompat="@drawable/ic_heart" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/MovieTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cv_video"
                    app:layout_constraintTop_toTopOf="@+id/cv_video"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/tv_vote_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/MovieRating"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    tools:text="8.0" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:numStars="5"
                    android:rating="2.5"
                    android:stepSize="0.1"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_vote_value"
                    app:layout_constraintEnd_toStartOf="@+id/fb_Like"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_vote_value"
                    app:layout_constraintTop_toTopOf="@+id/tv_vote_value"
                    app:layout_constraintWidth_max="100dp" />

                <TextView
                    android:id="@+id/tv_movie_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/MovieDate"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_value"
                    tools:text="Jan 13, 2017" />

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/MovieDate"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_release_date"
                    tools:text="152 min" />

                <com.nex3z.flowlayout.FlowLayout
                    android:id="@+id/genres_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:flChildSpacing="10dp"
                    app:flChildSpacingForLastRow="align"
                    app:flFlow="true"
                    app:flRowSpacing="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_title"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_duration">
                </com.nex3z.flowlayout.FlowLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tv_plot_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/plot"
                android:textAppearance="@style/MovieItemLabel"
                app:layout_constraintEnd_toEndOf="@+id/top_container"
                app:layout_constraintStart_toStartOf="@+id/top_container"
                app:layout_constraintTop_toBottomOf="@+id/top_container" />

            <TextView
                android:id="@+id/tv_plot_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MovieItemValue"
                app:layout_constraintEnd_toEndOf="@+id/tv_plot_label"
                app:layout_constraintStart_toStartOf="@+id/tv_plot_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_plot_label"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tv_plot_value"
                app:layout_constraintStart_toStartOf="@+id/tv_plot_value"
                app:layout_constraintTop_toBottomOf="@+id/tv_plot_value" />


            <TextView
                android:id="@+id/tvReviewsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reviews"
                android:textAppearance="@style/MovieItemLabel"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tv_plot_value"
                app:layout_constraintStart_toStartOf="@+id/tv_plot_value"
                app:layout_constraintTop_toBottomOf="@+id/rv_videos" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvReviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tv_plot_value"
                app:layout_constraintHeight_max="300dp"
                app:layout_constraintStart_toStartOf="@+id/tv_plot_value"
                app:layout_constraintTop_toBottomOf="@+id/tvReviewsTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>